# observatory

./: .env.example  .gitignore  CUSTOMIZE.md  Cargo.toml  README.md  docker-compose.yml  eps.toml  run.sh  serve.sh
.github/workflows/: release.yml
Scripts/: install.sh
config/: otel-collector.yml  prometheus.yml  tempo.yml
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: datasources.yml
dashboards/: home.json
src/: alert.rs  dashboard.rs  db.rs  main.rs  poller.rs
