[package]
name = "observatory"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "observatory"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
dirs        = "5"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono      = { version = "0.4", features = ["serde"] }
anyhow      = "1"
dotenvy            = "0.15"
tower-http         = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
